# pianoV3

./: .gitignore  CMakeLists.txt  README.md
Parameter/: hand1param.xml  hand2param.xml  pedalparam.xml
Score/: Pedal_Anticipatory.xml  Pedal_Direct.xml  Pedal_Syncopated.xml  itsumo.xml  itsumo_noStress.xml  itsumo_test.xml  pedalTest.xml  sonata.xml  sonata__.xml  sonata__noA.xml  sonata_noArticulation.xml  ttl.xml  ttl_noPedal.xml
include/: FingerMotor.hpp  Modbus.h  dBPort.hpp  playThatSheet.hpp  serial.hpp  whatTime.hpp
src/: DHtest.cpp  playScore.cpp  setZero.cpp
tinyxml2/: CMakeLists.txt
